# wschess

./: .gitignore  CMakeLists.txt  main.cpp
js-client/: .gitignore  index.js  package-lock.json  package.json  player1.js  player2.js
server/: CMakeLists.txt  server.cpp  server.hpp
ws-client/: package-lock.json  package.json
ws-client/src/components/app-root/: app-root.tsx
ws-client/src/org/: constants.ts  players.ts  server.ts  types.ts
